fix h2 align

--- a/src/style.scss
+++ b/src/style.scss
@@ -149,6 +149,10 @@ nav {
 .le-premier-numero {
   text-align: center;
 
+  h2 {
+    text-align: left;
+  }
+
   p {
     margin-right: 60%;
     text-align: left;
